--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ apiclient~=1.0.4
 google-api-python-client~=2.31.0
 PyMySQL~=1.0.2
 peewee~=3.14.8
+pyserial~=3.5
+RPi.GPIO~=0.7.0; platform_machine == "armv7l"
+Mock.GPIO~=0.1.8; platform_machine != "armv7l"
