--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   app:
-    image: doorman-hub
+    image: knipknap/doorman-hub:latest
     ports:
       - 80:80
     devices:
